# pipeline-monitor-ubuntu

./: .gitignore  CLAUDE.md  README.md  config.json.example  create_icons.py  demo_tray.py  pipeline_monitor_app.py  pyproject.toml  requirements-dev.txt  run-background.sh  run.sh
.claude/agents/: code-quality-reviewer.md  code-refactorer.md  dependency-manager.md  green-minimal-implementer.md  red-test-writer.md  test-coverage-analyzer.md
pipeline_monitor/: __init__.py  github_client.py  monitor.py  settings.py  settings_dialog.py  tray_icon.py
tests/: test_github_client.py  test_monitor.py  test_settings.py  test_tray_icon.py
